// Copyright (c) CloudCover
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

//go:generate mockery --name TerrariumServiceServer

package terrarium.v0;

option go_package = "github.com/cldcvr/terrarium/src/pkg/pb/terrariumpb";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

import "src/pkg/pb/grpc/validate/validate.proto";
import "src/pkg/pb/google/api/annotations.proto";
import "src/pkg/pb/protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Terrarium Service API";
    version: "0";
  };
  schemes: HTTPS;
};

message Module {
  string id = 1;
  string taxonomyId = 2;
  string moduleName = 3;
  string source = 4;
  string version = 5;
  string description = 6;
  repeated ModuleAttribute inputAttributes = 7;
  string namespace = 8;
}

message CompletionRequest {
  string codeContext = 1;
  repeated string modules = 2 [(validate.rules).repeated = {min_items: 1, unique: true, items: { string: {uuid: true} }}];
}

message CompletionResponse {
  repeated string suggestions = 1;
}

message Page {
  int32 size = 1; // default 100, maximum no limit
  int32 index = 2; // 0 indexed, default 0
  int32 total = 3; // READ-ONLY. Total number of pages available. ceil(record_count/page_size)
}

message ListModulesRequest {
  Page page = 1;
  string search = 2; // optional search text
  bool populateMappings = 3; // optional. include input-output attribute mappings of the module as well. page size cannot be higher then 100 in order to enable this option.
  repeated string namespaces = 4;
}

message ListModulesResponse {
  repeated Module modules = 1;
  Page page = 2;
}

message listModuleAttributesRequest {
  string moduleId = 1 [(validate.rules).string.uuid = true];
  Page page = 2;
  string search = 3; // optional search text
  bool populateMappings = 4; // optional. include input-output attribute mappings of the module as well. page size cannot be higher then 100 in order to enable this option.
}

message listModuleAttributesResponse {
  repeated ModuleAttribute attributes = 1;
  Page page = 2;
}

message ModuleAttribute {
  string name = 1;
  string description = 2;
  Module parentModule = 3;
  repeated ModuleAttribute outputModuleAttributes = 4;
  bool optional = 5;
}

message Dependency {
  string id = 1;
  string interface_id = 2;
  repeated string taxonomy = 3;
  string title = 4;
  string description = 5;
  JSONSchema inputs = 6;
  JSONSchema outputs = 7;
}

message JSONSchema {
  // Basic schema details
  string title = 1;
  string description = 2;
  string type = 3;  // e.g., string, number, integer, boolean, object, array, null

  // Default value for the field.
  google.protobuf.Value default = 4;

  // Common attributes
  repeated google.protobuf.Value examples = 5;
  repeated google.protobuf.Value enum = 6;

  // Attributes for string type
  int32 minLength = 7;
  int32 maxLength = 8;
  string pattern = 9;
  string format = 10;  // Standard formats like "date", "email", etc.

  // Attributes for number and integer types
  int32 minimum = 11;
  int32 maximum = 12;
  bool exclusiveMinimum = 13;  // Notice the type change to bool
  bool exclusiveMaximum = 14;  // Notice the type change to bool
  int32 multipleOf = 15;

  // Attributes for array type
  JSONSchema items = 16; // Defines the schema for array items
  bool additionalItems = 17;
  int32 minItems = 18;
  int32 maxItems = 19;
  bool uniqueItems = 20;

  // Attributes for object type
  map<string, JSONSchema> properties = 21; // Each property is itself a JSON schema
  repeated string required = 22;
}

message ListDependenciesResponse {
  repeated Dependency dependencies = 1;
  Page page = 2;
}

message Schema {
  string type = 1; // can be: "object", "array" or others based on context
  map<string, JSONSchema> properties = 2;
}

message DependencyInputsAndOutputs {
  string title = 1;
  string description = 2;
  string type = 3;
  oneof default_value {
      int32 default_number = 4;
      string default_string = 5;
  }
}

message DependencyInputsAndOutputsJSONSchema {
  string type = 1;
  map<string, DependencyInputsAndOutputs> properties = 2;
}

message DependencyInputsAndOutputsDependency {
  DependencyInputsAndOutputsJSONSchema inputs = 1;
  DependencyInputsAndOutputsJSONSchema outputs = 2;
}

service TerrariumService {
  // HealthCheck check endpoint
  rpc HealthCheck(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get: "/v0/healthcheck"
    };
  }

  // ListModules modules matching the source pattern
  rpc ListModules(ListModulesRequest) returns (ListModulesResponse) {
    option (google.api.http) = {
      get: "/v0/modules"
    };
  }

  // ListModuleAttributes returns a list of attributes of the given module.
  // Optionally, it can also include output suggestions that is attributes from other modules that can fullfil this module.
  rpc ListModuleAttributes(listModuleAttributesRequest) returns (listModuleAttributesResponse) {
    option (google.api.http) = {
      get: "/v0/modules/{moduleId=*}/attributes"
    };
  }
}

enum gitLabelEnum {
  label_no = 0;
  label_branch = 1;
  label_tag = 2;
  label_commit = 3;
}
